tests/ir_check/invalid-interface-input.expect
---CODE---
1
---STDERR---
error: bundle's availability is greater than the delay of the event
  ┌─ tests/errors/invalid-interface-input.fil:6:5
  │
2 │   comp Main<G: 3, L: 1>(
  │                      - event's delay
  ·
6 │     @[L, L+2] in2: 32,
  │     ^^^^^^^^^ available for 2 cycles

Compilation failed with 1 errors.
Run with --show-models to generate assignments for failing constraints.
